<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quick Apps</string>
    <string name="register_us_please">We need access to notifications</string>
    <string name="open_the_case">Open the case now</string>
    <!-- Torch Part [START] -->
    <string name="torch_module_name">Quick Torch</string>
    <string name="torch_is_on">Torch is On</string>
    <string name="touch_to_turn_off">Touch to turn off</string>
    <!-- Torch Part {END]   -->
    <!-- Compass Part [START] -->
    <string name="compass_module_name">Quick Compass</string>
    <!-- Compass Part {END]   -->
    <!-- Music Part [START] -->
    <string name="music_module_name">Quick Music</string>
    <string name="unknown">unknown</string>
    <!-- Music Part {END]   -->
    <!-- Calendar Part [START] -->
    <string name="calendar_module_name">Quick calendar</string>
    <string name="calendar_events">Quick Agenda</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="all_day">(all day)</string>
    <string name="now">Now</string>
    <string name="in">In</string>
    <string name="minute_s">minute/minutes</string>
    <string name="hour_s">hour/hours</string>
    <string name="day_s">day/days</string>
    <string name="week_s">week/weeks</string>
    <string name="month_s">month/months</string>
    <string name="more_then_year">More then a year left</string>
    <!-- Calendar Part {END]   -->
    <!-- Notification Part [START] -->
    <string name="notification_module_name">Quick Notifications</string>
    <string name="notification_empty">No notifications now</string>
    <string name="notification_removed">Notification removed</string>
    <!-- Notification Part {END]   -->
    <!-- Launcher Part [START] -->
    <string name="launcher_module_name">Quick Launcher</string>
    <!-- Launcher Part {END]   -->
    <!-- Toggles Part [START] -->
    <string name="toggles_module_name">Quick Toggles</string>
    <string name="wifi">Wi-Fi</string>
    <string name="wifi_off">Wi-Fi is turned off</string>
    <string name="wifi_on">Wi-Fi is turned on</string>
    <string name="wifi_connected">Connected to a Wi-Fi network <b><i>%1$s</i></b></string>
    <string name="wifi_network_available">Open Wi-Fi networks available</string>
    <string name="wifi_turning_off">Turning Wi-Fi off</string>
    <string name="wifi_turning_on">Turning Wi-Fi on</string>
    <string name="sound_sound">Sound</string>
    <string name="sound_vibrate">Vibrate</string>
    <string name="sound_silent">Silent</string>
    <string name="data_data">Data</string>
    <string name="data_off">Data connection is turned off</string>
    <string name="data_on">Data connection is turned on</string>
    <string name="data_off_airplane">Airplane mode - Data connection off</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_off">Bluetooth is turned off</string>
    <string name="bluetooth_on">Bluetooth is turned on</string>
    <string name="bluetooth_turning_off">Turning Bluetooth off</string>
    <string name="bluetooth_turning_on">Turning Bluetooth on</string>
    <string name="hotSpot">Hotspot</string>
    <string name="hotSpot_off">Hotspot is disabled</string>
    <string name="hotSpot_on">Hotspot mode is enabled</string>
    <string name="cant_change_airplane_mode">Can\'t change airplane mode</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_auto">Auto brightness</string>
    <string name="brightness_med">Medium brightness</string>
    <string name="brightness_max">High brightness</string>
    <string name="battery">Battery</string>
    <string name="charging">charging</string>
    <string-array name="toggles">
        <item>@string/wifi</item>
        <item>@string/data_data</item>
        <item>@string/brightness</item>
        <item>@string/sound_sound</item>
        <item>@string/bluetooth</item>
        <item>@string/hotSpot</item>
    </string-array>
    <!-- Toggles Part {END] -->
    <!-- RSS Part {START] -->
    <string name="news_module_name">Quick News</string>
    <string name="news_cant_init">Cannot load the module.</string>
    <string name="news_cant_init_subtext">please exit the app and try again.</string>
    <string name="news_network_error">Network error</string>
    <string name="news_network_error_subtext">Please check your internet connection and try again</string>
    <string name="loading">Loading…</string>
    <string name="news_should_login">@string/login_to_feedly</string>
    <string name="news_should_login_subtext">please open the case to login</string>
    <string name="client_id">sandbox</string>
    <string name="client_secret">YDRYI5E8OP2JKXYSDW79</string>
    <string name="login_to_feedly">Login To Feedly</string>
    <string name="news_no_content">No available content</string>
    <string name="news_no_content_subtext">Refresh to see new content</string>
    <string name="no_connection">No connection</string>
    <string name="start_downloading">Start Downloading</string>
    <!-- RSS Part [END]   -->
    <!-- Stopwatch & Timer Part {START] -->
    <string name="clock_module_name">Quick Time</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="brightness_low">Low brightness</string>
    <string name="stopwatch_run_on_back">Run on background</string>
    <string name="stopwatch_run_on_back_message">Do you want the stopwatch to run on background?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Stopwatch & Timer Part {END]  -->
    <!-- Calculator Part {START] -->
    <string name="calculator_module_name">Quick Calculator</string>
    <string name="error">Error</string>
    <!-- Calculator Part [END]   -->
    <!-- Desktop Part {START] -->
    <string name="how_to_add">How to add</string>
    <string name="how_to_add_step_1">1. Click the button to open the settings</string>
    <string name="how_to_add_step_2">2. Choose "Select apps"</string>
    <string name="how_to_add_step_3">3. Add the modules you want</string>
    <string name="how_to_add_tip">Tip: The Quick Launcher is a regular module that let you access all the other modules!</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="about">Quick Circle Apps is a group of modules for LG G3 Quick Circle case. The app also contains some QSlide modules.</string>
    <string name="about_2">The app uses LG Quick Circle SDK.</string>
    <string name="about_3">Author: Yoav Sternberg</string>
    <string name="about_4">Contact: yoav.goop@gmail.com</string>
    <string name="about_mail_chooser">Choose mail client</string>
    <string name="about_intent_failed">No mail clients installed</string>
    <string name="source_description">The source for Quick Circle Apps is stored on Github. The app uses Gradle to manage all the dependencies.</string>
    <string name="about_libraries">Credits:</string>
    <string-array name="drawer_primary_items">
        <item>Modules</item>
        <item>Source</item>
    </string-array>
    <string-array name="drawer_secondary_items">
        <item>How to add</item>
        <item>About</item>
    </string-array>
    <array name="drawer_secondary_icons">
        <item>@drawable/ic_action_help</item>
        <item>@drawable/ic_action_about</item>
    </array>
    <string name="quick">Quick</string>
    <string name="settings">Settings</string>
            <string name="credits">
        <![CDATA[
&#8226;LG for their Quick Circle and QSlide SDKs.<br>
&#8226;Excilys team for <a href="https://github.com/excilys/androidannotations/wiki">Android annotations</a> that made my life a lot easier.<br>
&#8226;Joan Zapata for <a href="https://github.com/JoanZapata/android-iconify">android-iconify</a>.<br>
&#8226;Google for Android, Support V4, V13 packages and GSON.<br>
&#8226;Jake Wharton for <a href="http://viewpagerindicator.com/">viewpagerindicator</a>.<br>
&#8226;Pablo Fernandez For <a href="https://github.com/fernandezpablo85/scribe-java">Scribe-java</a>.<br>
&#8226;<a href="http://www.blackbearblanc.dk/">Jeppe Foldager</a> for its wonderful icons.<br>
&#8226;Miras Absar for <a href="https://github.com/mirasmithy/airy">Airy</a>.<br>
&#8226;Udo Klimaschewski For <a href="https://github.com/uklimaschewski/EvalEx">EvalEx</a>.<br>
&#8226;Evgeny Shishkin for <a href="https://github.com/johnkil/Android-RobotoTextView">RobotoTextView</a>.<br>
&#8226;Jeff Gilfelt for <a href="https://github.com/jgilfelt/SystemBarTint">SystemBarTint</a>.<br>
&#8226;Faiz Malkani for <a href="https://github.com/FaizMalkani/FloatingActionButton">FloatingActionButton</a>.<br>
        ]]>
    </string>
    <string name="torch_launcher_shortcut">Launcher shortcut</string>
    <string name="torch_launcher_shortcut_subtext">Show torch module icon in your app drawer</string>
    <string name="torch_qslide_shortcut">QSlide shortcut</string>
    <string name="torch_qslide_shortcut_subtext">Show torch module icon in the QSlide bar</string>
    <string name="reboot_for_update">Reboot or restart SystemUI for applying the change</string>
    <string name="restart_launcher_for_update">Reboot or restart your launcher for applying the change</string>
    <string name="torch_force_floating">Force floating mode</string>
    <string name="torch_force_floating_subtext">Force QSlide floating mode for the torch module</string>
    <string name="changed_successfully">Changed successfully</string>
    <string name="music_listener_title">Open Notification Listener Settings</string>
    <string name="music_listener_subtitle">The module need access to notifications to work</string>
    <string name="repeating_title">Show repeating events</string>
    <string name="location_title">Show event location</string>
    <string name="location_subtitle">Everyone that access your phone will be able to see the event\'s location</string>
    <string name="privacy_title">Show notifications content</string>
    <string name="privacy_subtitle">The content of your notification may be secret</string>
    <string name="launcher_control_items">Order modules</string>
    <string name="launcher_control_items_subtitle">Order the modules in the launcher</string>
    <string name="toggles_order_items">Order toggles</string>
    <string name="toggles_order_items_subtitle">Order the toggles in the module</string>
    <string name="battery_title">Show battery percents</string>
    <string name="battery_subtitle">Show battery percents as the first toggle</string>
    <string name="force_floating_subtext">On open the case, it will launch the calculator on floating mode</string>
    <string name="show_millis_title">Show milliseconds</string>
    <string name="show_millis_subtitle">Show milliseconds in the timer</string>
    <!-- Desktop Part {END]  -->
</resources>