<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <RelativeLayout
        android:id="@+id/cover_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="17dp"
            android:textColor="@android:color/white"
            android:gravity="bottom|center"
            android:id="@+id/quick_circle_title"
            android:background="@drawable/stopwatch_actionbar"
            android:paddingTop="18.5dp"
            android:paddingBottom="5.0dp"
            android:layout_width="285.5dp"
            android:layout_height="55.25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/stopwatch_module_name"/>

        <RelativeLayout
            android:id="@+id/stopwatch"
            android:layout_width="285.5dp"
            android:layout_height="155dp"
            android:background="@android:color/background_light"
            android:layout_below="@id/quick_circle_title"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25dp"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/time"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textSize="40dp"
                android:textColor="@android:color/white"
                android:background="@drawable/stopwatch_btn_start"
                android:text="@string/start"/>

            <LinearLayout
                android:id="@+id/running_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/stopwatch_btn_stop"
                    android:text="@string/stop"/>
                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/pause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/stopwatch_btn_pause"
                    android:text="@string/pause"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/quick_circle_back_btn"
            android:background="@drawable/bg_quickcircle_sys"
            android:layout_width="285.5dp"
            android:layout_height="64.75dp"
            android:src="@drawable/quick_circle_back"
            android:scaleType="fitCenter"
            android:layout_below="@id/stopwatch"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/quick_circle_mask"
            android:layout_width="285.5dp"
            android:layout_height="277dip"
            android:src="@drawable/quickcover_mask"
            android:scaleType="fitCenter"
            android:layout_alignTop="@id/quick_circle_title"
            android:layout_centerHorizontal="true"
            android:layout_alignStart="@id/quick_circle_title"/>
    </RelativeLayout>
</RelativeLayout>