<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/cover_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="17dp"
            android:textColor="@android:color/white"
            android:gravity="bottom|center"
            android:id="@+id/quick_circle_title"
            android:background="@drawable/notifications_actionbar"
            android:paddingTop="18.5dp"
            android:paddingBottom="5.0dp"
            android:layout_width="285.5dp"
            android:layout_height="55.25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/notification_module_name"
            tools:ignore="SpUsage"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/notification_pager"
            android:layout_width="285.5dp"
            android:layout_height="155dp"
            android:layout_below="@id/quick_circle_title"
            android:layout_centerHorizontal="true"/>

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/notification_indicator"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/notification_pager"/>

        <RelativeLayout
            android:id="@+id/error_layout"
            android:layout_width="285.5dp"
            android:layout_height="155dp"
            android:layout_below="@id/quick_circle_title"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:background="@android:color/background_light"
            tools:ignore="SpUsage">

            <com.AutoResizeTextView
                android:id="@+id/title_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/open_the_case"
                android:textSize="19dp"/>

            <ImageView
                android:id="@+id/image_error"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_error"
                android:src="@drawable/ic_error"/>

            <com.AutoResizeTextView
                android:id="@+id/extra_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:layout_below="@+id/image_error"
                android:text="@string/register_us_please"
                android:textSize="17dp"/>
        </RelativeLayout>

        <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="285.5dp"
        android:layout_height="64.75dp"
        android:layout_below="@id/notification_indicator"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/quick_circle_back_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="70dp"
            android:paddingBottom="10dp"
            android:scaleType="centerInside"
            android:background="@drawable/back_as_half_background_dark"
            android:src="@drawable/ic_action_back_dark"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <IconButton
            android:id="@+id/notification_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:scaleType="centerInside"
            android:background="@drawable/back_as_half_background_dark"
            android:text="{fa-trash-o}"/>
    </LinearLayout>

        <ImageView
            android:id="@+id/quick_circle_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_width="285.5dp"
            tools:layout_height="277dip"
            android:src="@drawable/quickcover_mask"
            android:scaleType="fitCenter"
            android:layout_alignTop="@id/quick_circle_title"
            android:layout_centerHorizontal="true"
            android:layout_alignStart="@id/quick_circle_title"/>
    </RelativeLayout>
</RelativeLayout>